deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"server:latest","namespace":"rhacs-gate"},"fieldPath":"spec.template.spec.containers[?(@.name==\"server\")].image"}]'
  name: server
  namespace: rhacs-gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhacs-gate
  template:
    metadata:
      labels:
        app: rhacs-gate
    spec:
      containers:
      - command:
        - python3
        - main.py
        image: 'server:latest'
        name: server
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: rhacs-gate
spec:
  selector:
    app: rhacs-gate
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  name: rhacs
  namespace: rhacs-gate
spec:
  port:
    targetPort: 8080
  subdomain: rhacs
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: triage
    weight: 100
  wildcardPolicy: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhacs
  namespace: rhacs-gate
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  rules:
  - host: rhacs.dptools.openshift.org
    http:
      paths:
      - backend:
          service:
            name: server
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - rhacs.dptools.openshift.org
    secretName: triage-tls
